--- a/tets/ind.html
+++ b/tets/ind.html
@@ -18,7 +18,7 @@
     </div>
     <img src="Brazuca - Cat.png"  class="cat">
     <img src="blob1.svg"  id = "topleft" />
-    <img src="blob.svg"  id = "bottomright/>
+    <img src="blob.svg"  id = "bottomright"/>
 
   </div>
 </body>
