--- a/ind.html
+++ b/ind.html
@@ -11,12 +11,12 @@
 <body>
   <div class="main1">
     <div class="content">
-      <img src="Family Values - Child.png"  class="kid">
+      <img src="Family Values - Child.png"  id="kid">
       <h1 class="title">dimaagi</h1>
       <!-- <button class="btn">Get started</button> -->
       <a class="btn" href="content.html">Get started</a>
     </div>
-    <img src="Brazuca - Cat.png"  class="cat">
+    <img src="Brazuca - Cat.png"  id="cat">
     <img src="blob1.svg"  id = "topleft" />
     <img src="blob.svg"  id = "bottomright"/>
 
