gh page changes

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
   <div class="main1">
     <div class="content">
-      <img src="Family Values - Child.png"  id="kid">
+      <img src="assets/kid.png"  id="kid">
       <h1 class="title">dimaagi</h1>
       <!-- <button class="btn">Get started</button> -->
       <a class="btn" href="content.html">Get started</a>
     </div>
-    <img src="Brazuca - Cat.png"  id="cat">
-    <img src="blob1.svg"  id = "topleft" />
-    <img src="blob.svg"  id = "bottomright"/>
+    <img src="assets/cat.png"  id="cat">
+    <img src="assets/blob1.svg"  id = "topleft" />
+    <img src="assets/blob.svg"  id = "bottomright"/>
 
   </div>
 </body>
